2004-09-28  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/egg-recent-model.c: sync to latest
	libegg.

2004-09-27  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/egg-recent-util.c: sync to latest
	libegg.
	* gedit-utils.c: do not crash when gnome_vfs_uri_get_host_name
	return NULL;

2004-09-16  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/egg-recent-model.c: sync to latest
	libegg.

2004-08-17  Mark McLoughlin  <mark@skynet.ie>

	* recent-files/egg-recent-item.c,
	  recent-files/egg-recent-view-gtk.c: sync to latest
	libegg.

2004-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit-print.c: make the dialog resizable (Jody Golberg, #149726).

2004-08-07  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/* : update from libegg.

2004-08-07  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-dialog-replace.c: don't set the separator of
	a GtkMessageDialog: it triggers a gtk warning with gtk-2.4.

2004-08-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c:
	* gedit-utils.c: substitute eel_make_uri_canonical with
	gnome_vfs_make_uri_canonical.
	* gedit_utils.c: local copy of button_new_with_stock_icon

2004-08-06  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c (gedit_file_revert): don't leak uri.

2004-08-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-mdi.c: use document_get_deleted instead of
	open coding it. Spotted by Vinay M R.

2004-08-05  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-close-confirmatoion-dialog.c: 
	s/definitively/permanently.

2004-08-02  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-plugin-manager.c: fix previous fix.

2004-07-30  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-plugin-manager.c: avoid multiple about dialogs.
	* gedit-commands.c: remove unuseful scaling of the about pixbuf.

2004-07-29  Padraig O'Briain  <padraig.obriain@sun.com>

	* dialogs/uri.glade: Move labelled-by relation from GtkEntry 
	to GtkCombo. Fixes bug #145138
