@@ -1,3 +1,10 @@
+2004-09-30  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-document.c:
+	* gedit-file.c:
+	* gedit-utils.c: trivial s/eel/gnome_vfs for a couple of func
+	that have been copied verbatim to gnome-vfs
+
 2004-09-28  Paolo Borelli  <pborelli@katamail.com>
 
 	* recent-files/egg-recent-model.c: sync to latest
